--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -131,6 +131,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "capstone-frontend"
+    }
+  },
+  "defaultProject": "capstone-frontend",
+  "cli": {
+    "analytics": "c7272ffb-b54f-4643-a1f3-d79bb99e5cfc"
+  }
 }
